--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -134,7 +134,7 @@ add(a, b);</code></pre>
 
           <div class="media">
 
-            <figure class="media__obj media__obj--left">
+            <figure class="media__object media__object--left">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -151,7 +151,7 @@ add(a, b);</code></pre>
           </div>
 
           <pre><code>&lt;div class="media"&gt;
-  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;…&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
@@ -159,7 +159,7 @@ add(a, b);</code></pre>
 
           <div class="media">
 
-            <figure class="media__obj media__obj--right">
+            <figure class="media__object media__object--right">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -176,7 +176,7 @@ add(a, b);</code></pre>
           </div>
 
               <pre><code>&lt;div class="media"&gt;
-  &lt;div class="media__obj media__obj--right"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--right"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;…&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
@@ -184,7 +184,7 @@ add(a, b);</code></pre>
 
           <div class="media media--center">
 
-            <figure class="media__obj media__obj--left">
+            <figure class="media__object media__object--left">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -201,7 +201,7 @@ add(a, b);</code></pre>
           </div>
 
               <pre><code>&lt;div class="media media--center"&gt;
-  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;…&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
@@ -209,7 +209,7 @@ add(a, b);</code></pre>
 
           <div class="media">
 
-            <figure class="media__obj media__obj--left">
+            <figure class="media__object media__object--left">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -223,7 +223,7 @@ add(a, b);</code></pre>
 
               <div class="media">
 
-                <figure class="media__obj media__obj--left">
+                <figure class="media__object media__object--left">
                   <a href="#">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -244,11 +244,11 @@ add(a, b);</code></pre>
           </div>
 
           <pre><code>&lt;div class="media"&gt;
-  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;
 
     &lt;div class="media"&gt;
-      &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+      &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
       &lt;div class="media__body"&gt;…&lt;/div&gt;
     &lt;/div&gt;
 
@@ -1197,7 +1197,7 @@ add(a, b);</code></pre>
 
               <article class="post media" itemscope itemtype="http://schema.org/Article">
 
-                <figure class="post__thumbnail media__obj--left">
+                <figure class="post__thumbnail media__object--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
@@ -1228,7 +1228,7 @@ add(a, b);</code></pre>
 
               <article class="post media" itemscope itemtype="http://schema.org/Article">
 
-                <figure class="post__thumbnail media__obj--left">
+                <figure class="post__thumbnail media__object--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
@@ -1259,7 +1259,7 @@ add(a, b);</code></pre>
 
               <article class="post media" itemscope itemtype="http://schema.org/Article">
 
-                <figure class="post__thumbnail media__obj--left">
+                <figure class="post__thumbnail media__object--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
@@ -1318,7 +1318,7 @@ add(a, b);</code></pre>
 
               <li class="comment media" itemscope itemtype="http://schema.org/Comment">
 
-                <div class="media__obj--left">
+                <div class="media__object--left">
                   <a href="users/author" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
@@ -1339,7 +1339,7 @@ add(a, b);</code></pre>
 
               <li class="comment media" itemscope itemtype="http://schema.org/Comment">
 
-                <div class="media__obj--left">
+                <div class="media__object--left">
                   <a href="users/author" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
@@ -1360,7 +1360,7 @@ add(a, b);</code></pre>
 
               <li class="comment media" itemscope itemtype="http://schema.org/Comment">
 
-                <div class="media__obj--left">
+                <div class="media__object--left">
                   <a href="users/author" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
