--- a/source/assets/css/modules/forms.css
+++ b/source/assets/css/modules/forms.css
@@ -60,7 +60,7 @@ textarea::placeholder {
 
 input[type="reset"],
 input[type="submit"] {
-  -webkit-appearance: button;
+  appearance: button;
   background-color: var(--inputButtonBgColor);
   color: var(--inputButtonColor);
   cursor: pointer;
@@ -74,7 +74,7 @@ input[type="submit"]:hover {
 }
 
 input[type="search"] {
-  -webkit-appearance: textfield;
+  appearance: textfield;
 }
 
 label {
