--- a/source/assets/css/modules/button.css
+++ b/source/assets/css/modules/button.css
@@ -36,6 +36,7 @@ button {
   cursor: pointer;
   font: inherit;
   margin: 0;
+  outline: 0;
   overflow: visible;
   padding: 0;
   text-transform: none;
