--- a/source/assets/css/modules/breadcrumb.css
+++ b/source/assets/css/modules/breadcrumb.css
@@ -11,9 +11,14 @@
   padding: 0;
 }
 
+.breadcrumb::before,
 .breadcrumb::after {
   content: ' ';
   display: table;
+}
+
+.breadcrumb::after {
+  clear: both;
 }
 
 .breadcrumb li {
