--- a/source/assets/css/modules/anchor.css
+++ b/source/assets/css/modules/anchor.css
@@ -10,7 +10,7 @@ a {
   background-color: transparent;
   border: 0;
   color: var(--anchorColor);
-  outline: none;
+  outline: 0;
   text-decoration: var(--anchorTextDecoration);
   transition: background-color .3s, color .3s;
 }
