--- a/source/assets/css/layout/footer.css
+++ b/source/assets/css/layout/footer.css
@@ -1,6 +1,7 @@
 :root {
   --footerBgColor: inherit;
   --footerColor: inherit;
+  --footerFontSize: .875rem;
   --footerPaddingVertical: 2rem;
 }
 
@@ -13,6 +14,7 @@ footer {
 .site__footer {
   background: var(--footerBgColor);
   color: var(--footerColor);
+  font-size: var(--footerFontSize);
   padding-bottom: var(--footerPaddingVertical);
   padding-top: var(--footerPaddingVertical);
 }
