--- a/source/templates/pages/ui/index.ejs
+++ b/source/templates/pages/ui/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" itemscope itemtype="http://schema.org/WebPage">
 
-<%- partial('../../partials/layout/head', {
+<%- include('../../partials/layout/head', {
   page: {
     title: 'UI',
     description: 'Description goes here'
@@ -10,7 +10,7 @@
 
 <body>
 
-  <%- partial('../../partials/layout/header') %>
+  <%- include('../../partials/layout/header') %>
 
   <div class="site__container">
 
@@ -1443,9 +1443,9 @@
 
   </div>
 
-  <%- partial('../../partials/layout/footer') %>
+  <%- include('../../partials/layout/footer') %>
 
-  <%- partial('../../partials/layout/script') %>
+  <%- include('../../partials/layout/script') %>
 
 </body>
 </html>
